create html elements for header
i created the elements for the header

--- a/index.html
+++ b/index.html
@@ -7,6 +7,15 @@
         <title>Odin Exercise</title>
     </head>
     <body>
-
+        <header>
+            <h5>header logo</h5>
+            <div>
+                <ul class="head-link">
+                    <li><a>header link one</a></li>
+                    <li><a>header link two</a></li>
+                    <li><a>header link three</a></li>
+                </ul>
+            </div>
+        </header>
     </body>
 </html>
