create style document and style header
I created teh style.css document for styling the website
i style the header with it

--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
         <title>Odin Exercise</title>
     </head>
     <body>
-        <header>
-            <h5>header logo</h5>
+        <header class="header">
+            <h4>header logo</h4>
             <div>
                 <ul class="head-link">
                     <li><a>header link one</a></li>
