--- a/index.html
+++ b/index.html
@@ -17,5 +17,15 @@
                 </ul>
             </div>
         </header>
+        <main class="main">
+            <div class="main-info">
+                <h1>This website is awesome</h1>
+                <div>This website has some subtext that goes here under the main title. It's smaller font and the color is lower contrast</div>
+                <button>Sing up</button>
+            </div>
+            <div class="img">
+                this is a placeholder for a image
+            </div>
+        </main>
     </body>
 </html>
