--- a/index.html
+++ b/index.html
@@ -27,5 +27,26 @@
                 this is a placeholder for a image
             </div>
         </main>
+        <div class="third-sec">
+            <h2>Some ramdom information</h2>
+            <div class="img-cont">
+                <div class="r-img">
+                    <div class="img-r"></div>
+                    <p>this is some subtext under an illustration or image</p>
+                </div>
+                <div class="r-img">
+                    <div class="img-r"></div>
+                    <p>this is some subtext under an illustration or image</p>
+                </div>
+                <div class="r-img">
+                    <div class="img-r"></div>
+                    <p>this is some subtext under an illustration or image</p>
+                </div>
+                <div class="r-img">
+                    <div class="img-r"></div>
+                    <p>this is some subtext under an illustration or image</p>
+                </div>
+            </div>
+        </div>
     </body>
 </html>
