--- a/index.html
+++ b/index.html
@@ -48,5 +48,9 @@
                 </div>
             </div>
         </div>
+        <div class="fourth-sec">
+            <p><em>this is an inspiring quote, or a testimonial from a customer. Maybe it's just filling up space, or maybe people will actually read it. who knows? All I know is that it looks nice</em></p>
+            <span>-Thor, God of Thunder</span>
+        </div>
     </body>
 </html>
