--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
     <head>
         <meta charset="utf-8">
+        <meta lang="en">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link href="style.css" rel="stylesheet">
         <title>Odin Exercise</title>
@@ -64,5 +65,11 @@
                 </button>
             </div>
         </div>
+
+        <footer>
+            <div>
+                Copyright <span> &copy </span> The Odin Project 2024
+            </div>
+        </footer>
     </body>
 </html>
